mule-user-guide/v/3.5/servicenow-connector.adoc
=  ServiceNow连接器

ServiceNow连接器便于Mule集成和ServiceNow应用程序之间的连接。 ServiceNow连接器当前提供对ServiceNow数据库中标准表的访问，使您可以对它们执行以下一组操作：插入，删除记录，删除多个，更新，获取，获取密钥和获取记录。

*Release Notes*： link:/release-notes/servicenow-connector-release-notes[ServiceNow连接器发行说明]

== 先决条件

本文档假定您熟悉Mule， link:/mule-user-guide/v/3.5/anypoint-connectors[Anypoint连接器]和 link:/anypoint-studio/v/5/index[Anypoint Studio界面]。为提高您对Studio的熟悉度，请考虑完成一个或多个 link:/anypoint-studio/v/6/basic-studio-tutorial[Anypoint Studio教程]。此外，本页假定您对 link:/mule-user-guide/v/3.7/mule-concepts[骡流]和 link:/mule-user-guide/v/3.5/global-elements[骡全球元素]有基本的了解。

本文档描述了Anypoint Studio，Mule运行时的图形用户界面环境中的实现示例，还包括在XML编辑器中执行相同操作的配置细节。

如果您不使用Anypoint Studio进行开发，请按照 link:http://mulesoft.github.io/servicenow-connector/4.0.1/guide/install[安装ServiceNow Maven依赖关系]中的说明进入您的`pom.xml`文件。

为了使ServiceNow连接器v4.0正常工作，本地声明元素的名称空间必须由目标名称空间限定。在您的ServiceNow实例中进行以下更改以执行此操作：

. 转到*System Properties*> *Web Services*
. 点击*Properties*
. 取消选择**elementFormDefault **属性的**YES|NO**框，如下所示。

  image:snow-screen.png[雪花屏]

请注意，该框在默认情况下处于选中状态，将*elementFormDefault*属性设置为*true*。通过取消选择框，我们将属性设置为*false*，从而指定本地声明的元素必须由目标名称空间限定。

== 在Anypoint Studio中安装ServiceNow连接器

您可以使用 link:/mule-user-guide/v/3.5/installing-connectors[从Anypoint Exchange安装连接器]中的说明在Anypoint Studio中安装连接器。

但是，要在生产环境中使用ServiceNow连接器，您必须具有以下两项之一：

* 使用Mule的企业许可证
*  CloudHub Starter，Professional或Enterprise帐户

请联系mailto：info@mulesoft.com [MuleSoft销售团队]获取其中任何一个。 （详细了解 link:/mule-user-guide/v/3.5/installing-an-enterprise-license[安装企业许可证]。）

== 配置

要在Mule应用程序中使用ServiceNow连接器，您必须配置：

* 应用程序中所有ServiceNow连接器使用的全局ServiceNow元素。
* 流中每个ServiceNow连接器实例的参数。

=== 使用Studio Visual Editor进行配置

请按照以下步骤在Mule应用程序中创建全局ServiceNow配置：

. 点击画布底部的*Global Elements*标签，然后点击*Create*。
. 在*Choose Global Type*向导中，使用过滤器定位并选择ServiceNow，然后单击O *。
. 根据以下说明配置参数。
+
image:serviceNowge.png[serviceNowge]
+
[%header,cols="2*"]
|===
| {字段{1}}说明
| *Name*  |为配置输入一个名称，以便以后可以引用它。
| *Username*  |用于连接到ServiceNow实例的用户名
| *Password*  |登录到ServiceNow实例的密码
| *Service Endpoint*  | ServiceNow实例的URL。 +
格式：`https://<instancename>.service-now.com`
|===
. 访问*Pooling Profile*标签，配置与通过连接池管理多个连接相关的任何设置。
. 访问*Reconnection*选项卡，配置与Mule在失去与ServiceNow的连接时应执行的重新连接策略相关的任何设置。
. 点击*OK*保存全局连接器配置。
. 返回Studio中的*Message Flow*标签。

请按照以下步骤配置流中ServiceNow连接器的参数：

. 将ServiceNow连接器拖到画布上，然后选择它打开属性编辑器。
. 根据下表配置连接器的参数。
+
[%header,cols="2*"]
|===
| {字段{1}}说明
| *Display Name*  |为应用程序中的连接器输入唯一标签。
| *Connector Configuration*  |连接到链接到此连接器的全局元素。全局元素封装有关到目标资源或服务的连接的可重用数据。选择刚刚创建的全局ServiceNow连接器元素。
| *Operation*  |选择此组件必须执行的操作：插入，删除记录，删除多个，更新，获取，获取键和获取记录。
| *Type*  |选择ServiceNow表进行操作。有关完整列表，请参阅 link:/release-notes/servicenow-connector-release-notes[ServiceNow发行说明]。
| *<Operation> Request*  | *From Message:*选择此选项可根据传入有效负载定义操作。 +
 手动创建对象：选择此选项可手动定义搜索值。 Mule提供了一个编辑来促进这项任务。
|===

. 保存您的配置。

=== 使用XML编辑器或独立配置

. 确保您已将ServiceNow名称空间包含在配置文件中。
+
[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/servicenow
http://www.mulesoft.org/schema/mule/servicenow/current/mule-servicenow.xsd
----
+
. 使用以下全局配置代码在流的外部和上方创建全局ServiceNow配置。
+
[source, xml, linenums]
----
<servicenow:config name="ServiceNow" username="YOUR_USERNAME" password="YOUR_PASSWORD" serviceEndpoint="YOUR_SERVICENOW_URI"/>
----
+
[%header,cols="2*"]
|===
| {属性{1}}说明
| *name*  |为配置输入一个名称，以便可以从流中引用它。
| *username*  |用于连接到ServiceNow实例的用户名。
| *password*  |登录到ServiceNow实例的密码。
| *serviceEndpoint*  | ServiceNow实例的URL。 +
格式：`https://<instancename>.service-now.com  `
|===
+
. 构建您的应用程序流程，然后使用以下操作之一添加ServiceNow连接器。
+
[%header,cols="2*"]
|===
| {操作{1}}说明
| http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#delete-multiple[<的ServiceNow：删除数倍>] a |
通过示例值从目标表中删除多条记录。

| http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#delete-record[<的ServiceNow：删除记录>] a |
通过提供sys_id来删除目标表中的记录。

| http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#get[<的ServiceNow：GET>] a |
通过sys_id从目标表中查询单个记录并返回记录及其字段。

| http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#get-keys[<的ServiceNow：获取密钥>] a |
通过示例值查询目标表并返回一个以逗号分隔的sys_id列表。

| http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#get-records[<的ServiceNow：GET-记录>] a |
通过示例值查询目标表并返回所有匹配的记录及其字段。

| http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#insert[<的ServiceNow：插入>] a |
为目标表创建新记录。

| http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#update[<的ServiceNow：更新>] a |
更新URL中目标表中的现有记录，由强制sys_id字段标识。

|===
+
. 按照上表中的链接访问每个操作的详细配置参考。


== 示例用例

作为ServiceNow管理员，在ServiceNow应用程序中插入用户记录，如果用户属于开发部门，则为用户创建一个Blackberry手机请求。

===  Studio Visual Editor


. 将HTTP连接器拖到新流程中。打开连接器的属性编辑器。将交换模式设置为`one-way`，并将路径设置为`onboard`。
+
image:HTTPConnectorProperties.png[HTTPConnectorProperties]

. 新流程现在可通过路径`http://localhost:8081/onboard`到达。由于交换模式设置为单向，因此不会将任何响应消息返回给请求者。

. 在HTTP端点之后添加一个设置负载转换器来处理消息负载。

. 根据下表配置设置有效负载变压器。
+
[%header,cols="34,33,33"]
|===
| {字段{1}}值 | XML
| *Display Name*  |用户信息a |
[source, code, linenums]
----
doc:name="User info"
----
| *Value* a | *Note:*复制下面的代码并连接成连续语句+
在添加到Anypoint Studio之前：
[SOURCE]
----
#[['fname':message.inboundProperties['fname'], 'lname':message.inboundProperties['lname'], 'email':message.inboundProperties['email'], dept':message.inboundProperties['dept']]]` a|
[source, code, linenums]
----
value =“＃[['fname'：message.inboundProperties ['fname']，
'L-NAME'：message.inboundProperties [ 'L-NAME']，
'电子邮件'：message.inboundProperties [ '电子邮件']
'部门'：message.inboundProperties [ '部门']]]”
----
|===
+
With the above configuration, the transformer is set to accept browser query parameters in the following format:
+
`http://localhost:8081/onboard?fname=<user’s first name> &lname=<user’s last name> &email= <user’s email address>&dept=<department of the user>`

. Add a Variable transformer to preserve the user’s first name and last name from the message payload. +
Configure the transformer as follows:

+
image:Setusername.png[Setusername]

. Drag a ServiceNow connector into the flow to create a ServiceNow user with the message payload.
. Add a new Global element by clicking the plus sign next to the *Connector Configuration* field.
. Configure this Global Element according to the table below (Refer to <<Configuration>> for more details).
+
[%header,cols="2*"]
|===
|Field |Description
|*Name* |Enter a unique label for this global element to be referenced by connectors in the flow.
|*Username* |Enter a Username for connecting to the ServiceNow instance.
|*Password* |Enter the user password.
|*ServiceNow Endpoint* |Enter the URL of your ServiceNow server. +
The format of the ServiceNow URL is: `https://<instancename>.service-now.com`
|===
. Click *Test Connection* to confirm that Mule can connect with your ServiceNow instance. If the connection is successful, click *OK* to save the configurations of the global element. If unsuccessful, revise or correct any incorrect parameters, then test again.
. Back in the properties editor of the ServiceNow connector, configure the remaining parameters according to the table below.
+
[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Insert System User (or any other name you prefer)
|*Config Reference* |ServiceNow (Enter name of the global element you have created)
|*Operation* |Insert
|*Type* |User Management --> User (SYS_USER)
|*Insert Request* |Select the `From Message` option
|===
. Drag a DataMapper transformer between the Variable transformer and the ServiceNow connector, then click it to open its properties editor.
. Configure the Input properties of the DataMapper according to the steps below. +
.. In the *Input type*, select **Map<k,v>**, then select *User Defined*.
.. Click **Create/Edit Structure**.  
.. Enter a name for the Map, then select *Element* for *Type*.
.. Add the child fields according to the table below.
+
[%header%autowidth.spread]
|===
|Name |Type
|*dept* |String
|*email* |String
|*lname* |String
|*fname* |String
|===

. The Output properties are automatically configured to correspond to the ServiceNow connector.
. Click *Create Mapping*, then drag each input data field to its corresponding output ServiceNow field. Click the blank space on the canvas to save the changes.
. Add another ServiceNow connector to the flow.
. In the *Connector Configuration* field, select the global ServiceNow element you have created.
. Configure the remaining parameters according to the table below.
+
[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Create a Request (or any other name you prefer)
|*Config Reference* |Enter the name of the global element you have created
|*Operation* |Insert
|*Type* |Service Catalog --> Requested Item (SC_REQ_ITEM)
|*Insert Request* a|
Select Create Manually, then click the … button next to the option. On the Object Builder window, find requestedFor:String field and enter the following value:
`#[flowVars['UserName']]`
|===

. Add a Variable transformer, then configure it according to the table below.
+
[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Set Request ID
|*Operation* |Set Variable
|*Name* |Request ID
|*Value* |`#[payload.number]`
|===

. Add a ServiceNow connector into the flow to create a ServiceNow request item for the user.
. In the *Connector Configuration* field, select the ServiceNow global element you created.
. Configure the remaining parameters according to the table below.
+
[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Assign the Requested Item to User (or any other name you want to give to the connector)
|*Config Reference* |Enter the name of the global element you have created
|*Operation* |Insert
|*Type* |Service Catalog --> Requested Item (SC_REQ_ITEM)
|*Insert Request* a|Select Create Manually, then click the button next to it. On the Object Builder window, do the following:

Enter `Blackberry` in *CatItem: String* field

Enter `#[flowVars['RequestID']]` in *request:String* field 
|===

. Save and run the project as a Mule Application.
. From a browser, navigate to `http://localhost:8081/onboard `and enter the user’s first name, last name, email address, and department in the form query parameters: +
`http://localhost:8081/onboard?fname=<user’s first name>&lname=<user’s last name> &email= <user’s email address>&dept=<department of the user>`
. Mule performs the query and creates the user record in ServiceNow, then assigns Blackberry phone if the user is a developer.

=== XML Editor


. Add a *servicenow:config* global element to your project, then configure its attributes according to the table below (see code below for a complete sample).
+
[source, xml, linenums]
----
<servicenow:config name="ServiceNow" username="<user> " password=" <pw> " serviceEndpoint=" <endpoint_URL> " doc:name="的ServiceNow“/>
----
+
[%header,cols="2*"]
|===
a|
Attribute
a|
Value
|*name* |ServiceNow
|*doc:name* |ServiceNow
|*username* |<Your username>
|*password* |<Your password>
|*serviceEndpoint* |<the URL of your ServiceNow instance>
|===

. Create a Mule flow with an *HTTP endpoint*, configuring the endpoint according to the table below (see code below for a complete sample).
+
[source, xml, linenums]
----
<http:inbound-endpoint exchange-pattern="one-way" host="localhost" port="8081" doc:name="/onboard" path="onboard"/>
----
+
[%header,cols="2*"]
|===
a|
Attribute
a|
Value
|*exchange-pattern* |one-way
|*host* |local host
|*port* |8081
|*path* |onboard
|*doc:name* |/onboard
|===
. After the *HTTP* endpoint, add a set-payload transformer to set the message payload in the flow.
+
[source, xml, linenums]
----
<set-payload value="#[['fname':message.inboundProperties['fname'],'lname':message.inboundProperties['lname'],'email':message.inboundProperties['email'],'dept':message.inboundProperties['dept']]]" doc:name="Set Payload"/>
----
+
[%header,cols="2*"]
|===
|Attribute |Value
|*value* |`#[['fname':message.inboundProperties['fname'],'lname':message.inboundProperties['lname'],'email':message.inboundProperties['email'],'dept':message.inboundProperties['dept']]]`
|*doc:name* |Set Payload
|===
+
. Add a set-variable element in the flow to preserve the user name from the payload.
+
[source, xml]
----
<set-variable variableName="UserName" value="#[message.inboundProperties['fname']+ ' ' +message.inboundProperties['lname']]" doc:name="Set User name"/>
----
+
[%header,cols="2*"]
|===
|Attribute |Value
|variableName |UserName
|value |`#[message.inboundProperties['fname']+ ' ' +message.inboundProperties['lname']]`
|doc:name |Set User name
|===
. Add the servicenow:insert element to the flow. Configure the attributes according to the table below.
+
[source, xml, linenums]
----
<servicenow:insert config-ref="ServiceNow" type="SYS_USER" doc:name="Insert System User">
       <servicenow:insert-request ref="#[payload]"/>
</servicenow:insert>
----
+
[%header,cols="2*"]
|===
|Attribute |Value
|*config-ref* |ServiceNow
|*type* |User Management --> User (SYS_USER)
|*doc:name* |Insert System User
|*ref* a|"#[payload]"

|===
+
. Add a *DataMapper element* between the Set Payload transformer and the ServiceNow connector to pass the message payload to ServiceNow.
+
[source, xml]
----
<data-mapper:transform config-ref="Map_To_Map" doc:name="Payload to Insert User"/>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*config-ref* |Map_To_Map
|*doc:name* |Payload to Insert User
|===
+
. You must configure the *DataMapper* *element* through Studio's Visual Editor. Switch the view to  Message Flow view, then click the DataMapper element to set its properties.
.. In the *Input type*, select **Map<k,v>**, then select *User Defined*.
.. Click **Create/Edit Structure**.  
.. Enter a name for the Map, then select *Element* for *Type*.
.. Add the child fields according to the table below.
+
[%header%autowidth.spread]
|===
|Name |Type
|*dept* |String
|*email* |String
|*lname* |String
|*fname* |String
|===
+
. Add a *servicenow:insert element* to create a request for an item in ServiceNow. Configure the attributes according to the table below.
+
[source, xml, linenums]
----
<servicenow:insert config-ref="ServiceNow" type="SC_REQUEST" doc:name="Create a Request">
       <servicenow:insert-request>
           <servicenow:insert-request key="requestedFor">＃[flowVars [ '用户名']] </servicenow:insert-request>
       </servicenow:insert-request>
</servicenow:insert>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*config-ref* |ServiceNow
|*type* |Service Catalog --> Request (SC_REQUEST)
|*doc:name* |Create a Request
|*key* |requestedFor
|===
+
. Add a set-variable element to preserve the ServiceNow request ID.
+
[source, xml]
----
<set-variable variableName="RequestID" value="#[payload.number]" doc:name="Set Request Id"/>
----
+
[%header,cols="2*"]
|===
|Attribute |Value
|*variableName* |RequestID
|*value* |`#[payload.number]`
|*doc:name* |Set Request Id
|===
+
. Add *servicenow:insert* to assign the specified catalog item against the request ID.
+
[source, xml, linenums]
----
<servicenow:insert config-ref="ServiceNow" type="SC_REQ_ITEM" doc:name="Assign a requested item with user">
       <servicenow:insert-request>
           <servicenow:insert-request key="request">＃[flowVars [ '请求ID']] </servicenow:insert-request>
           <servicenow:insert-request key="catItem">黑莓</servicenow:insert-request>
       </servicenow:insert-request>
</servicenow:insert>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*config-ref* |ServiceNow
|*type* |Service Catalog --> Requested Item (SC_REQ_ITEM)
|*doc:name* |Assign a requested item with user
|*key* |`"request">#[flowVars['RequestID']]`
|*key* |`"catItem">Blackberry`
|===


== Example Code

[source, xml, linenums]
----
<mule xmlns：tracking = "http://www.mulesoft.org/schema/mule/ee/tracking" xmlns：json = "http://www.mulesoft.org/schema/mule/json" xmlns：servicenow = "http://www.mulesoft.org/schema/mule/servicenow" xmlns：data-mapper = "http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns：http = {{4} = "http://www.mulesoft.org/schema/mule/core" xmlns：doc = "http://www.mulesoft.org/schema/mule/documentation" xmlns：spring = "http://www.springframework.org/schema/beans" xmlns：xsi = "http://www.w3.org/2001/XMLSchema-instance" xsi：schemaLocation =“http://www.springframework.org/schema/ bean http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/servicenow http://www.mulesoft.org/schema/mule/servicenow/current/mule-servicenow.xsd
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd“>
     <data-mapper:config name="Map_To_Map" transformationGraphPath="map_to_map.grf" doc:name="Map_To_Map"/>
     <servicenow:config name="ServiceNow" username="<user> " password=" <pw> " serviceEndpoint=" <endpoint> " doc:name="的ServiceNow“/>
     <flow name="onboarding-example" doc:name="onboarding-example">
         <http:inbound-endpoint exchange-pattern="one-way" host="localhost" port="8081" doc:name="/onboard" path="onboard"/>
         <set-payload value="#[['fname':message.inboundProperties['fname'],'lname':message.inboundProperties['lname'],'email':message.inboundProperties['email'],'dept':message.inboundProperties['dept']]]" doc:name="Set Payload"/>
         <set-variable variableName="UserName" value="#[message.inboundProperties['fname']+ ' ' +message.inboundProperties['lname']]" doc:name="Set User name"/>
         <data-mapper:transform config-ref="Map_To_Map" doc:name="Payload to Insert User"/>
         <servicenow:insert config-ref="ServiceNow" type="SYS_USER" doc:name="Insert System User">
             <servicenow:insert-request ref="#[payload]"/>
         </servicenow:insert>
         <servicenow:insert config-ref="ServiceNow" type="SC_REQUEST" doc:name="Create a Request">
             <servicenow:insert-request>
                 <servicenow:insert-request key="requestedFor">＃[flowVars [ '用户名']] </servicenow:insert-request>
             </servicenow:insert-request>
         </servicenow:insert>
         <set-variable variableName="RequestID" value="#[payload.number]" doc:name="Set Request Id"/>
         <servicenow:insert config-ref="ServiceNow" type="SC_REQ_ITEM" doc:name="Assign a requested item with user">
             <servicenow:insert-request>
                 <servicenow:insert-request key="request">＃[flowVars [ '请求ID']] </servicenow:insert-request>
                 <servicenow:insert-request key="catItem">黑莓</servicenow:insert-request>
             </servicenow:insert-request>
         </servicenow:insert>
     </flow>
</mule>
----

== See Also

* Learn more about working with link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint Connectors].
