mule-user-guide/v/3.6/servicenow-connector.adoc
=  ServiceNow连接器
:keywords: anypoint studio, connector, endpoint, servicenow, service now

*_Standard_*

ServiceNow连接器便于Mule集成和ServiceNow应用程序之间的连接。 ServiceNow连接器当前提供对ServiceNow数据库中标准表的访问，使您可以对它们执行以下一组操作：插入，删除记录，删除多个，更新，获取，获取密钥和获取记录。

*Release Notes*： link:/release-notes/servicenow-connector-release-notes[ServiceNow连接器发行说明]

*Reference*： link:http://mulesoft.github.io/servicenow-connector[ServiceNow连接器]

=== 假设

本文档假定您熟悉Mule， link:/mule-user-guide/v/3.6/anypoint-connectors[Anypoint连接器]和 link:/anypoint-studio/v/6/index[Anypoint Studio界面]。为提高您对Studio的熟悉度，请考虑完成一个或多个 link:/anypoint-studio/v/6/basic-studio-tutorial[Anypoint Studio教程]。此外，本页假定您对 link:/mule-user-guide/v/3.6/mule-concepts[骡流]和 link:/mule-user-guide/v/3.6/global-elements[骡全球元素]有基本的了解。

本文档描述了Mule图形用户界面Anypoint Studio上下文中的实现示例，还包括在XML编辑器中执行相同操作的配置细节。

如果您不使用Anypoint Studio进行开发，请按照 link:http://mulesoft.github.io/servicenow-connector[安装ServiceNow Maven依赖关系]中的说明进入您的`pom.xml`文件。

为了使ServiceNow连接器v4.0正常工作，本地声明元素的名称空间必须由目标名称空间限定。在您的ServiceNow实例中进行以下更改以执行此操作：

. 转到*System Properties*> *Web Services*
. 点击*Properties*
. 取消选择**elementFormDefault**属性的**YES|NO**框，如下所示。
+
image:snow-screen.png[雪花屏]

请注意，该框在默认情况下处于选中状态，将*elementFormDefault*属性设置为*true*。通过取消选择框，我们将属性设置为*false*，从而指定本地声明的元素必须由目标名称空间限定。

== 在Anypoint Studio中安装ServiceNow连接器

您可以使用 link:/mule-user-guide/v/3.6/installing-connectors[从Anypoint Exchange安装连接器]中的说明在Anypoint Studio中安装连接器。

但是，要在生产环境中使用ServiceNow连接器，您必须具有以下两项之一：

* 使用Mule的企业许可证
*  CloudHub Starter，Professional或Enterprise帐户

请联系mailto：info@mulesoft.com [MuleSoft销售团队]获取其中任何一个。 （详细了解 link:/mule-user-guide/v/3.6/installing-an-enterprise-license[安装企业许可证]。）

== 配置

要在Mule应用程序中使用ServiceNow连接器，您必须配置：

* 全局ServiceNow元素将被应用程序中的所有ServiceNow连接器使用（请阅读有关 link:/mule-user-guide/v/3.6/global-elements[全球元素在骡子]的更多信息）。
* 流中每个ServiceNow连接器实例的参数。

[tabs]
------
[tab,title="Studio Visual Editor"]
....

Follow these steps to create a global ServiceNow configuration in a Mule application:

. Click the *Global Elements* tab at the base of the canvas, then click *Create*.
. In the *Choose Global Type* wizard, use the filter to locate and select, S**erviceNow, **then click *OK*.
. Configure the parameters according to instructions below.

+
image:serviceNowge.png[serviceNowge]
+
[%header,cols="2*"]
|===
|Field |Description
|*Name* |Enter a name for the configuration so it can be referenced later.
|*Username* |Username for connecting to the ServiceNow instance
|*Password* |Password to log into the ServiceNow instance
|*Service Endpoint* |The URL of the ServiceNow instance. +
Format:` https://<instancename>.service-now.com`
|===
. Access the *Pooling Profile* tab to configure any settings relevant to managing multiple connections via a connection pool.
. Access the *Reconnection* tab to configure any settings relevant to reconnection strategies that Mule should execute if it loses its connection to ServiceNow.
. Click *OK* to save the global connector configurations.
. Return to the *Message Flow* tab in Studio.

Follow these steps to configure the parameters of a ServiceNow connector in the flow:

. Drag the ServiceNow connector onto the canvas, then select it to open the properties editor.
. Configure the connector's parameters according to the table below.
+
[%header,cols="2*"]
|===
|Field |Description
|*Display Name* |Enter a unique label for the connector in your application.
|*Connector Configuration* |Connect to a global element linked to this connector. Global elements encapsulate reusable data about the connection to the target resource or service. Select the global ServiceNow connector element that you just created.
|*Operation* |Select the action this component must perform: Insert, Delete Record, Delete Multiple, Update, Get, Get Keys, and Get Record.
|*Type* |Select the ServiceNow table to act upon. For a complete list, see the link:/release-notes/servicenow-connector-release-notes[ServiceNow Release Notes].
|*<Operation> Request* |*From Message:*  Select this option to define the operation based on the incoming payload. +
 **Create Object manually:  S**elect this option to define the search values manually. Mule provides an editor to facilitate this task.
|===
. Save your configurations.
....
[tab,title="XML Editor"]
....

First, ensure that you have included the ServiceNow namespaces in your configuration file.

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/servicenow 
http://www.mulesoft.org/schema/mule/servicenow/current/mule-servicenow.xsd
----

Follow these steps to configure a ServiceNow connector in your application.

. First, create a global ServiceNow configuration outside and above your flows, using the following global configuration code.

[source, xml, linenums]
----
<servicenow:config name="ServiceNow" username="YOUR_USERNAME" password="YOUR_PASSWORD" serviceEndpoint="YOUR_SERVICENOW_URI"/>
----

+
[%header,cols="2*"]
|===
|Attribute |Description
|*name* |Enter a name for the configuration so it can be referenced from within the flow.
|*username* |Username for connecting to the ServiceNow instance.
|*password* |Password to log into the ServiceNow instance.
|*serviceEndpoint* |The URL of the ServiceNow instance. +
Format: `https://<instancename>.service-now.com`
|===
. Build your application flow, then add a ServiceNow connector using one of the following operations.
+
[%header,cols="2*"]
|===
|Operation |Description
|<servicenow:delete-multiple> a|
Delete multiple records from the targeted table by example values.

|<servicenow:delete-record> a|
Delete a record from the targeted table by supplying its sys_id.

|<servicenow:get> a|
Query a single record from the targeted table by sys_id and return the record and its fields.

|<servicenow:get-keys> a|
Query the targeted table by example values and return a comma delimited list of sys_id.

|<servicenow:get-records> a|
Query the targeted table by example values and return all matching records and their fields.

|<servicenow:insert> a|
Creates a new record for the targeted table.

|<servicenow:update> a|
Updates a existing record in the targeted table in the URL, identified by the mandatory sys_id field.

|===
+
Follow the links in the table above to access detailed configuration reference for each of these operations.
....
------

== 示例用例

作为ServiceNow管理员，在ServiceNow应用程序中插入用户记录，如果用户属于开发部门，则为用户创建一个Blackberry手机请求。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Drag an HTTP connector into a new flow. Open the connector's properties editor. Set the exchange pattern to `one-way` and the Path to `onboard`.
+
image:HTTPConnectorProperties.png[HTTPConnectorProperties]

. The new flow is now reachable through the path `http://localhost:8081/onboard`. As the exchange pattern is set to one-way, no response message will be returned to the requester.
. Add a Set Payload transformer after HTTP endpoint to process the message payload.
. Configure the Set Payload transformer according to the table below.
+
[%header,cols="34,33,33"]
|===
|Field |Value |XML
|*Display Name* |User info a|`doc:name="User info"`
|*Value* |*Note:* Copy the lines below and concatenate into a continuous statement before adding to Anypoint Studio: +
 `#[['fname':message.inboundProperties['fname'], 'lname':message.inboundProperties['lname'], 'email':message.inboundProperties['email'], dept':message.inboundProperties['dept']]]` a|`value="# [['fname':message.inboundProperties['fname'],
'lname':message.inboundProperties['lname'],
'email':message.inboundProperties['email'],
'dept':message.inboundProperties['dept']]]"`
|===
+
With the above configuration, the transformer is set to accept browser query parameters in the following format:
+
`  http://localhost:8081/onboard?fname=<user’s first name> &lname=<user’s last name> &email= <user’s email address>&dept=<department of the user> `
+
. Add a Variable transformer to preserve the user’s first name and last name from the message payload. +
Configure the transformer as follows:

+
image:Setusername.png[Setusername] +
+

. Drag a ServiceNow connector into the flow to create a ServiceNow user with the message payload.
. Add a new Global element by clicking the plus sign next to the *Connector Configuration* field.
. Configure this Global Element according to the table below (Refer to <<Configuration>> for more details).
+
[%header,cols="2*"]
|===
|Field |Description
|*Name* |Enter a unique label for this global element to be referenced by connectors in the flow.
|*Username* |Enter a Username for connecting to the ServiceNow instance.
|*Password* |Enter the user password.
|*ServiceNow Endpoint* |Enter the URL of your ServiceNow server. +
The format of the ServiceNow URL is: `https://<instancename>.service-now.com`
|===

. Click *Test Connection* to confirm that Mule can connect with your ServiceNow instance. If the connection is successful, click *OK* to save the configurations of the global element. If unsuccessful, revise or correct any incorrect parameters, then test again.

. Back in the properties editor of the ServiceNow connector, configure the remaining parameters according to the table below.
+

[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Insert System User (or any other name you prefer)
|*Config Reference* |ServiceNow (Enter name of the global element you have created)
|*Operation* |Insert
|*Type* |User Management --> User (SYS_USER)
|*Insert Request* |Select the `From Message` option
|===

. Drag a DataMapper transformer between the Variable transformer and the ServiceNow connector, then click it to open its properties editor.
. Configure the Input properties of the DataMapper according to the steps below. +
.. In the *Input type*, select **Map<k,v>**, then select *User Defined*.
.. Click **Create/Edit Structure**.  
.. Enter a name for the Map, then select *Element* for *Type*.
.. Add the child fields according to the table below.
+
[%header%autowidth.spread]
|===
|Name |Type
|*dept* |String
|*email* |String
|*lname* |String
|*fname* |String
|===

. The Output properties are automatically configured to correspond to the ServiceNow connector.
. Click *Create Mapping*, then drag each input data field to its corresponding output ServiceNow field. Click the blank space on the canvas to save the changes.
. Add another ServiceNow connector to the flow.
. In the *Connector Configuration* field, select the global ServiceNow element you have created.
. Configure the remaining parameters according to the table below.

[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Create a Request (or any other name you prefer)
|*Config Reference* |Enter the name of the global element you have created
|*Operation* |Insert
|*Type* a|
Service Catalog --> Request (SC_REQUEST)

|*Insert Request* |Select *Create Manually*, then click the … button next to the option. On the Object Builder window, find *requestedFor:String* field and enter the following value: `#[flowVars['UserName']]`
|===

. Add a Variable transformer, then configure it according to the table below.
+
[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Set Request ID
|*Operation* |Set Variable
|*Name* |Request ID
|*Value* |`#[payload.number]`
|===

. Add a ServiceNow connector into the flow to create a ServiceNow request item for the user.
. In the *Connector Configuration* field, select the ServiceNow global element you created.
. Configure the remaining parameters according to the table below.
+

[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Assign the Requested Item to User (or any other name you want to give to the connector)
|*Config Reference* |Enter the name of the global element you have created
|*Operation* |Insert
|*Type* |Service Catalog --> Requested Item (SC_REQ_ITEM)
|*Insert Request* a|
Select *Create Manually*, then click the button next to it. On the Object Builder window, do the following:

Enter `Blackberry` in *CatItem: String* field

Enter `#[flowVars['RequestID']]` in *request:String* field 

|===

. Save and run the project as a Mule Application.
. From a browser, navigate to `+http://localhost:8081/onboard+` and enter the user’s first name, last name, email address, and department in the form query parameters:
 `http://localhost:8081/onboard?fname=<user’s first name>&lname=<user’s last name> &email= <user’s email address>&dept=<department of the user>`
. Mule performs the query and creates the user record in ServiceNow, then assigns Blackberry phone if the user is a developer.

//^
....
[tab,title="XML Editor"]
....

. Add a *servicenow:config* global element to your project, then configure its attributes according to the table below (see code below for a complete sample).
+

[source, xml, linenums]
----
<servicenow:config name="ServiceNow" username="<user>" password="<pw>" serviceEndpoint="<endpoint_URL>" doc:name="ServiceNow"/>
----

+

[%header,cols="2*"]
|===

a|
Attribute

 a|
Value

|*name* |ServiceNow
|*doc:name* |ServiceNow
|*username* |<Your username>
|*password* |<Your password>
|*serviceEndpoint* |<the URL of your ServiceNow instance>
|===

. Create a Mule flow with an *HTTP endpoint*, configuring the endpoint according to the table below (see code below for a complete sample).
+

[source, xml, linenums]
----
<http:inbound-endpoint exchange-pattern="one-way" host="localhost" port="8081" doc:name="/onboard" path="onboard"/>
----

+

[%header,cols="2*"]
|===

a|
Attribute

 a|
Value

|*exchange-pattern* |one-way
|*host* |local host
|*port* |8081
|*path* |onboard
|*doc:name* |/onboard
|===

. After the *HTTP* endpoint, add a set-payload transformer to set the message payload in the flow.
+

[source, xml, linenums]
----
<set-payload value="#[['fname':message.inboundProperties['fname'],'lname':message.inboundProperties['lname'],'email':message.inboundProperties['email'],'dept':message.inboundProperties['dept']]]" doc:name="Set Payload"/>
----

+

[%header,cols="2*"]
|===
|Attribute |Value
|*value* |`#[['fname':message.inboundProperties['fname'],'lname':message.inboundProperties['lname'],'email':message.inboundProperties['email'],'dept':message.inboundProperties['dept']]]`
|*doc:name* |Set Payload
|===

. Add a **set-variable** element in the flow to preserve the user name from the payload.
+

[source, xml, linenums]
----
<set-variable variableName="UserName" value="#[message.inboundProperties['fname']+ ' ' +message.inboundProperties['lname']]" doc:name="Set User name"/>
----
+

[%header,cols="2*"]
|===
|Attribute |Value
|variableName |UserName
|value |`#[message.inboundProperties['fname']+ ' ' +message.inboundProperties['lname']]`
|doc:name |Set User name
|===

. Add **servicenow:insert** element to the flow now. Configure the attributes according to the table below.
+

[source, xml, linenums]
----
<servicenow:insert config-ref="ServiceNow" type="SYS_USER" doc:name="Insert System User">
      <servicenow:insert-request ref="#[payload]"/>
</servicenow:insert>
----

+

[%header,cols="2*"]
|===
|Attribute |Value
|*config-ref* |ServiceNow
|*type* |User Management --> User (SYS_USER)
|*doc:name* |Insert System User
|*ref* a|
----

"#[payload]"
----

|===
. Add a *DataMapper element* between the Set Payload transformer and the ServiceNow connector to pass the message payload to ServiceNow.
+

[source, xml, linenums]
----
<data-mapper:transform config-ref="Map_To_Map" doc:name="Payload to Insert User"/>
----

+

[%header%autowidth.spread]
|===
|Attribute |Value
|*config-ref* |Map_To_Map
|*doc:name* |Payload to Insert User
|===

. You must configure the *DataMapper* *element* through Studio's Visual Editor. Switch the view to  Message Flow view, then click the DataMapper element to set its properties.
.. In the *Input type*, select **Map<k,v>**, then select *User Defined*.
.. Click **Create/Edit Structure**.  
.. Enter a name for the Map, then select *Element* for *Type*.
.. Add the child fields according to the table below.

+
[%header%autowidth.spread]
|===
|Name |Type
|*dept* |String
|*email* |String
|*lname* |String
|*fname* |String
|===

. Add a *servicenow:insert element* to create a request for an item in ServiceNow. Configure the attributes according to the table below.
+

[source, xml, linenums]
----
<servicenow:insert config-ref="ServiceNow" type="SC_REQUEST" doc:name="Create a Request">
      <servicenow:insert-request>
          <servicenow:insert-request key="requestedFor">#[flowVars['UserName']]</servicenow:insert-request>
      </servicenow:insert-request>
</servicenow:insert>
----

+

[%header%autowidth.spread]
|===
|Attribute |Value
|*config-ref* |ServiceNow
|*type* |Service Catalog --> Request (SC_REQUEST)
|*doc:name* |Create a Request
|*key* |requestedFor
|===

. Add a **set-variable element** to preserve the ServiceNow request ID.
+

[source, xml, linenums]
----
<set-variable variableName="RequestID" value="#[payload.number]" doc:name="Set Request Id"/>
----

+

[%header,cols="2*"]
|===
|Attribute |Value
|*variableName* |RequestID
|*value* |`#[payload.number]`
|*doc:name* |Set Request Id
|===

. Add *servicenow:insert* to assign the specified catalog item against the request ID.

+
[%header%autowidth.spread]
|===
|Attribute |Value
|*config-ref* |ServiceNow
|*type* |Service Catalog --> Requested Item (SC_REQ_ITEM)
|*doc:name* |Assign a requested item with user
|*key* |`"request">#[flowVars['RequestID']]`
|*key* |`"catItem">Blackberry`
|===
....
------

== 示例代码

[source, xml, linenums]
----
<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:servicenow="http://www.mulesoft.org/schema/mule/servicenow" xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/servicenow http://www.mulesoft.org/schema/mule/servicenow/current/mule-servicenow.xsd
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
    <data-mapper:config name="Map_To_Map" transformationGraphPath="map_to_map.grf" doc:name="Map_To_Map"/>
    <servicenow:config name="ServiceNow" username="<user>" password="<pw>" serviceEndpoint="<endpoint>" doc:name="ServiceNow"/>
    <flow name="onboarding-example" doc:name="onboarding-example">
        <http:inbound-endpoint exchange-pattern="one-way" host="localhost" port="8081" doc:name="/onboard" path="onboard"/>
        <set-payload value="#[['fname':message.inboundProperties['fname'],'lname':message.inboundProperties['lname'],'email':message.inboundProperties['email'],'dept':message.inboundProperties['dept']]]" doc:name="Set Payload"/>
        <set-variable variableName="UserName" value="#[message.inboundProperties['fname']+ ' ' +message.inboundProperties['lname']]" doc:name="Set User name"/>
        <data-mapper:transform config-ref="Map_To_Map" doc:name="Payload to Insert User"/>
        <servicenow:insert config-ref="ServiceNow" type="SYS_USER" doc:name="Insert System User">
            <servicenow:insert-request ref="#[payload]"/>
        </servicenow:insert>
        <servicenow:insert config-ref="ServiceNow" type="SC_REQUEST" doc:name="Create a Request">
            <servicenow:insert-request>
                <servicenow:insert-request key="requestedFor">#[flowVars['UserName']]</servicenow:insert-request>
            </servicenow:insert-request>
        </servicenow:insert>
        <set-variable variableName="RequestID" value="#[payload.number]" doc:name="Set Request Id"/>
        <servicenow:insert config-ref="ServiceNow" type="SC_REQ_ITEM" doc:name="Assign a requested item with user">
            <servicenow:insert-request>
                <servicenow:insert-request key="request">#[flowVars['RequestID']]</servicenow:insert-request>
                <servicenow:insert-request key="catItem">Blackberry</servicenow:insert-request>
            </servicenow:insert-request>
        </servicenow:insert>
    </flow>
</mule>
----

== 另请参阅

* 详细了解如何使用 link:/mule-user-guide/v/3.6/anypoint-connectors[Anypoint连接器]。
